# paperazzi

./: .cursorignore  .gitignore  .gitmodules  LICENSE.txt  README.md  config.ini  pyproject.toml
.github/workflows/: tests.yml
data/analyses/autaff/openai/3.0.0/: ins-gpt-4o_mst-mistral-ocr-2505-1912.02098_0000  ins-gpt-4o_mst-mistral-ocr-2505-2210.08437_0000  ins-gpt-4o_mst-mistral-ocr-2505-2306.00135_0000  ins-gpt-4o_mst-mistral-ocr-2505-2306.11781_0000  ins-gpt-4o_mst-mistral-ocr-2505-2306.16334_0000  ins-gpt-4o_mst-mistral-ocr-2505-2310.19103_0000  ins-gpt-4o_mst-mistral-ocr-2505-2401.10860_0000  ins-gpt-4o_mst-mistral-ocr-2505-2402.06121_0000  ins-gpt-4o_mst-mistral-ocr-2505-2403.01946_0000  ins-gpt-4o_mst-mistral-ocr-2505-2403.04118_0000  ins-gpt-4o_mst-mistral-ocr-2505-2403.13213_0000  ins-gpt-4o_mst-mistral-ocr-2505-2404.09939_0000  ins-gpt-4o_mst-mistral-ocr-2505-3z1Ws6GEYV4_0000  ins-gpt-4o_mst-mistral-ocr-2505-7R1gmDrfry_0000  ins-gpt-4o_mst-mistral-ocr-2505-8085987351c746c425589d85439926c5_0000  ins-gpt-4o_mst-mistral-ocr-2505-80bd06a7eaea4d8fea5081b3efd1665d_0000  ins-gpt-4o_mst-mistral-ocr-2505-8140724233d8ba06aeeeaad2a8357af4_0000  ins-gpt-4o_mst-mistral-ocr-2505-8174b267177444c4c58ec6db34b8e878_0000  ins-gpt-4o_mst-mistral-ocr-2505-81978f302df52da0e87532368a896fbd_0000  ins-gpt-4o_mst-mistral-ocr-2505-819f95fbbe4f13b2eea76e6e61cabb0e_0000  ins-gpt-4o_mst-mistral-ocr-2505-819f95fbbe4f13b2eea76e6e61cabb0e_0001  ins-gpt-4o_mst-mistral-ocr-2505-82a24b07651f2906ac874bc0bca6f045_0000  ins-gpt-4o_mst-mistral-ocr-2505-82a8d0c7e17e1f266e999ccc5cee16ce_0000  ins-gpt-4o_mst-mistral-ocr-2505-8479b7f4681a5e9ea5f741df7c82e9ea_0000  ins-gpt-4o_mst-mistral-ocr-2505-851fa17af8345c2e2066f32cea870202_0000  ins-gpt-4o_mst-mistral-ocr-2505-85f6fe16adb37931a7ec2345604b7e62_0000  ins-gpt-4o_mst-mistral-ocr-2505-866f9ee27e224bf42982765f3d067e4d_0000  ins-gpt-4o_mst-mistral-ocr-2505-8677014f1420563b32b185937275a330_0000  ins-gpt-4o_mst-mistral-ocr-2505-8692afce6cb14effd90b46fd9a36a20e_0000  ins-gpt-4o_mst-mistral-ocr-2505-8888f9b6f8469b979b0ad241138aacb3_0000  ins-gpt-4o_mst-mistral-ocr-2505-88a57585a6ec9472e02196470df005e1_0000  ins-gpt-4o_mst-mistral-ocr-2505-891cc4a68111bf94747c5e96e2aee70e_0000  ins-gpt-4o_mst-mistral-ocr-2505-8a9f3ef6401f8cfbc5828a12576e920a_0000  ins-gpt-4o_mst-mistral-ocr-2505-8b01d384d082a9d9a19e7069216fcc18_0000  ins-gpt-4o_mst-mistral-ocr-2505-8b07cde663b9f150e334995eb9c32b72_0000  ins-gpt-4o_mst-mistral-ocr-2505-8b5cbac7e6bc0d81d286e5b3b0fd6460_0000  ins-gpt-4o_mst-mistral-ocr-2505-8ccbf1b1e63e08e3645efdf93d1ea6fd_0000  ins-gpt-4o_mst-mistral-ocr-2505-8cf1c94871aeefecce4753eefc3a7043_0000  ins-gpt-4o_mst-mistral-ocr-2505-8e92073895ec741626d42e8981ee0f6d_0000  ins-gpt-4o_mst-mistral-ocr-2505-9088b99374bc5ee3a53e076b75059561_0000  (+65 more)
data/analyses/autaffhtml/openai/1.0.0/: opn-gpt-4o_doi-0ffca5cf-916a979257392d39b81554b693af8f89_0000  opn-gpt-4o_doi-1367e518-8ccbf1b1e63e08e3645efdf93d1ea6fd_0000  opn-gpt-4o_doi-1aa5e63c-9246069abcfb02cc01cc0163415e60df_0000  opn-gpt-4o_doi-1b705944-8692afce6cb14effd90b46fd9a36a20e_0000  opn-gpt-4o_doi-323c6228-a13b7ea80ed55d280660c069e352be9e_0000  opn-gpt-4o_doi-332d64fd-932eda1a62c5b4176a46f1271eb76d35_0000  opn-gpt-4o_doi-33d9b696-a13b7ea80ed55d280660c069e352be9e_0000  opn-gpt-4o_doi-35c9a75e-xRqAvRNUmq_0000  opn-gpt-4o_doi-3de519ee-cCJGuKJYG8_0000  opn-gpt-4o_doi-4de9cfa0-a145025a4d86953aeafaf5ffcbde4d2c_0000  opn-gpt-4o_doi-52647644-909e785543bb6169293392cec359db6b_0000  opn-gpt-4o_doi-565ba803-82a24b07651f2906ac874bc0bca6f045_0000  opn-gpt-4o_doi-5ad2d979-cCJGuKJYG8_0000  opn-gpt-4o_doi-6d86c6be-8888f9b6f8469b979b0ad241138aacb3_0000  opn-gpt-4o_doi-6fdef6f2-851fa17af8345c2e2066f32cea870202_0000  opn-gpt-4o_doi-75945914-9ecbf96a3cab60b06cc6900041130bfd_0000  opn-gpt-4o_doi-7a95f4f6-Nc6U1Z0DDt_0000  opn-gpt-4o_doi-90f07540-8b01d384d082a9d9a19e7069216fcc18_0000  opn-gpt-4o_doi-92cab086-2401.10860_0000  opn-gpt-4o_doi-9b311400-2403.04118_0000  opn-gpt-4o_doi-9dcd9c11-90c5fa4c650a5047601bc60506ac07f6_0000  opn-gpt-4o_doi-9de5131e-8085987351c746c425589d85439926c5_0000  opn-gpt-4o_doi-a42c6a81-9de7d3f465f5919766cc36213712a20c_0000  opn-gpt-4o_doi-a964cee4-8085987351c746c425589d85439926c5_0000  opn-gpt-4o_doi-af35f8e6-gWWjz9NBo9_0000  opn-gpt-4o_doi-b02f5720-9de7d3f465f5919766cc36213712a20c_0000  opn-gpt-4o_doi-b2cfd5da-92cb7282c530ec3fc0e7391040677811_0000  opn-gpt-4o_doi-b39ec2a1-aa682933c239983bc54cc487ba6fb862_0000  (+11 more)
data/autaff/: paperoni_validation_set.json  paperoni_validation_set_500_authors.json  validation_set.txt
data/validated/autaff/: 1912.02098.yaml  2306.00135.yaml  2306.11781.yaml  2306.16334.yaml  2310.19103.yaml  2401.10860.yaml  2402.06121.yaml  2403.01946.yaml  2403.04118.yaml  2403.13213.yaml  2404.09939.yaml  3z1Ws6GEYV4.yaml  7R1gmDrfry.yaml  C7Z3yhWUAU.yaml  Nc6U1Z0DDt.yaml  PpFVz1exwZ.yaml  ZLVbQEu4Ab.yaml  _4F4CDK9Mo.yaml  cCJGuKJYG8.yaml  gWWjz9NBo9.yaml  jnIBiP2di1.yaml  sTYuRVrdK3.yaml  sXMQPKbLXf.yaml  ubzNoJjOKj.yaml  xRqAvRNUmq.yaml
src/paperazzi/: __about__.py  __init__.py  compute_cost.py  config.py  log.py  utils.py
src/paperazzi/platform/: utils.py
src/paperazzi/platform/instructor/: utils.py
src/paperazzi/platform/openai/: utils.py
src/paperazzi/platform/vertexai/: utils.py
src/paperazzi/structured_output/: utils.py
src/paperazzi/structured_output/autaff/: analysis.py  evaluate.py  model.py  model_v1.py  model_v2.py  model_v3.py
src/paperazzi/structured_output/autaffhtml/: analysis.py  evaluate.py  model.py
src/paperazzi/structured_output/autaffpdf/: analysis.py  evaluate.py  model.py  model_v1.py  model_v2.py
src/paperazzi/structured_output/parsepdf/: model.py  model_v0.py  ocr.py
tests/: __init__.py  config.ini  conftest.py  test_compute_cost.py  test_config.py  test_utils.py
tests/test_compute_cost/: test_compute_cost_argv0_openai_1_.txt  test_compute_cost_argv1_openai_False_.txt  test_compute_cost_argv3_vertexai__.txt  test_compute_cost_argv4_openai_True_.txt  test_compute_cost_argv6_vertexai_1_.txt  test_compute_cost_argv7_vertexai__.txt
(+351 files in other folders)
