[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "paperazzi"
dynamic = ["version"]
description = 'LLM-Based Paper Query System with Evaluation Framework'
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Satya Ortiz-Gagne", email = "satya.ortiz-gagne@mila.quebec" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "openai",
]
[project.optional-dependencies]
openai = []
vertexai = [
  "google-genai",
]

[project.urls]
Documentation = "https://github.com/Satya Ortiz-Gagne/paperazzi#readme"
Issues = "https://github.com/Satya Ortiz-Gagne/paperazzi/issues"
Source = "https://github.com/Satya Ortiz-Gagne/paperazzi"

[tool.hatch.version]
path = "src/paperazzi/__about__.py"

[tool.hatch.envs.default]
python = "3.10"
installer = "uv"

[tool.hatch.envs.default.scripts]
sync = "uv sync --active"

[tool.hatch.envs.default.env-vars]
PAPERAZZI_CFG = "{env:PAPERAZZI_CFG:{root:real}/config.ini}"
# # linux seams to require the following to avoid
# # ImportError: cannot import name '_message' from 'google.protobuf.pyext'
# PROTOCOL_BUFFERS_PYTHON_IMPLEMENTATION = "upb"

[tool.hatch.envs.tests]
extra-dependencies = [
  "paperazzi[openai]",
  "paperazzi[vertexai]",
  "pytest",
  "pytest-regressions",
]
[tool.hatch.envs.tests.scripts]
tests = "pytest tests {args}"
tests-cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=paperazzi tests {args}"

[tool.hatch.envs.openai]
extra-dependencies = [
  "paperazzi[openai]",
]

[tool.hatch.envs.vertexai]
extra-dependencies = [
  "paperazzi[vertexai]",
]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black",
  "isort",
]
[tool.hatch.envs.lint.scripts]
lint = [
  "python3 -m black {args} .",
  "python3 -m isort --profile black {args} .",
]

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/paperazzi tests}"

[tool.coverage.run]
source_pkgs = ["paperazzi", "tests"]
branch = true
parallel = true
omit = [
  "src/paperazzi/__about__.py",
]

[tool.coverage.paths]
paperazzi = ["src/paperazzi", "*/paperazzi/src/paperazzi"]
tests = ["tests", "*/paperazzi/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
